--- a/puzzle.css
+++ b/puzzle.css
@@ -1,21 +1,45 @@
+body {
+	background-image: url("background.jpg");
+}
+
 #whole-page {
-    width: screen.availWidth;
-    height: 700px;
+    width: 1350px;
+    height: 450px;
     /*background-color: green;*/
     text-align: center;
+    margin: auto;
 }
 
 #whole-pic {
-    width: 368px;
-    height: 368px;
-    background-color: white;
+	position:relative;
+	/*left: 499px;
+	top: 80px;*/
+    width: 364px;
+    height: 364px;
+    background-color: gray;
     margin: auto;
+    z-index: 0;
     /*background-color: red;*/
 }
 
+#pre {
+	position: relative;
+	left: 493px;
+	top: -365px;
+	width: 360px;
+	height: 360px;
+	background: url("panda.jpg");
+	border-style: solid;
+	border-color: gray;
+	border-width: 2px;
+	z-index:-1;
+	/*background-color: red;*/
+}
+
 button {
-    position: relative;
-    top: 20px;
+    position: absolute;
+    top: 480px;
+    left: 46%;
     background-color: blue;
     font-size: 20px;
     color: white;
