--- a/puzzle.css
+++ b/puzzle.css
@@ -1,6 +1,12 @@
 body {
-	background-image: url("background.jpg");
 	text-align: center;
+}
+
+#bg {
+	position: absolute;
+	z-index: -2;
+	width: 100%;
+	height: 100%;
 }
 
 #whole-page {
