--- a/puzzle.css
+++ b/puzzle.css
@@ -1,4 +1,3 @@
-
 body {
 	text-align: center;
 }
@@ -14,21 +13,17 @@ body {
 #whole-page {
     width: 1350px;
     height: 450px;
-    /*background-color: green;*/
     text-align: center;
     margin: auto;
 }
 
 #whole-pic {
 	position:relative;
-	/*left: 499px;
-	top: 80px;*/
     width: 364px;
     height: 364px;
     background-color: gray;
     margin: auto;
     z-index: 0;
-    /*background-color: red;*/
 }
 
 #pre {
@@ -42,7 +37,6 @@ body {
 	border-color: gray;
 	border-width: 2px;
 	z-index:-1;
-	/*background-color: red;*/
 }
 
 button {
@@ -51,9 +45,9 @@ button {
     color: white;
     padding: 10px 15px 10px 15px;
     transition: all 1s;
-    -moz-transition: all 1s; /* Firefox 4 */
-	-webkit-transition: all 1s; /* Safari 和 Chrome */
-	-o-transition: all 1s; /* Opera */
+    -moz-transition: all 1s; 
+	-webkit-transition: all 1s; 
+	-o-transition: all 1s; 
     box-shadow: 5px 5px 10px #888888;
 }
 
@@ -69,9 +63,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") 0px 0px;
 }
 
@@ -83,9 +77,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -88px 0px;
 }
 
@@ -97,9 +91,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -176px 0px;
 }
 
@@ -111,9 +105,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -264px 0px;
 }
 
@@ -125,9 +119,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") 0px -88px;
 }
 
@@ -139,9 +133,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -88px -88px;
 }
 
@@ -153,9 +147,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -176px -88px;
 }
 
@@ -167,9 +161,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -264px -88px;
 }
 
@@ -181,9 +175,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") 0px -176px;
 }
 
@@ -195,9 +189,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -88px -176px;
 }
 
@@ -209,9 +203,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -176px -176px;
 }
 
@@ -223,9 +217,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -264px -176px;
 }
 
@@ -237,9 +231,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") 0px -264px;
 }
 
@@ -251,9 +245,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -88px -264px;
 }
 
@@ -265,9 +259,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -176px -264px;
 }
 
@@ -279,9 +273,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: url("panda.jpg") -264px -264px;
 }
 
@@ -293,9 +287,9 @@ button:hover {
     border-color: gray;
     border-style: solid;   
     transition: all 0s;
-    -moz-transition: all 0s; /* Firefox 4 */
-    -webkit-transition: all 0s; /* Safari 和 Chrome */
-    -o-transition: all 0s; /* Opera */ 
+    -moz-transition: all 0s; 
+    -webkit-transition: all 0s; 
+    -o-transition: all 0s;  
     background: rgba(0, 0, 212, 0.1) url("") 0px 0px;
 }
 
