--- a/puzzle.css
+++ b/puzzle.css
@@ -32,7 +32,7 @@ body {
 	top: -365px;
 	width: 360px;
 	height: 360px;
-	background: url("panda.jpg");
+	background: url("pic/panda.jpg");
 	border-style: solid;
 	border-color: gray;
 	border-width: 2px;
@@ -66,7 +66,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") 0px 0px;
+    background: url("pic/panda.jpg") 0px 0px;
 }
 
 .oneTwo {
@@ -80,7 +80,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -88px 0px;
+    background: url("pic/panda.jpg") -88px 0px;
 }
 
 .oneThree {
@@ -94,7 +94,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -176px 0px;
+    background: url("pic/panda.jpg") -176px 0px;
 }
 
 .oneFour {
@@ -108,7 +108,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -264px 0px;
+    background: url("pic/panda.jpg") -264px 0px;
 }
 
 .twoOne {
@@ -122,7 +122,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") 0px -88px;
+    background: url("pic/panda.jpg") 0px -88px;
 }
 
 .twoTwo {
@@ -136,7 +136,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -88px -88px;
+    background: url("pic/panda.jpg") -88px -88px;
 }
 
 .twoThree {
@@ -150,7 +150,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -176px -88px;
+    background: url("pic/panda.jpg") -176px -88px;
 }
 
 .twoFour {
@@ -164,7 +164,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -264px -88px;
+    background: url("pic/panda.jpg") -264px -88px;
 }
 
 .threeOne {
@@ -178,7 +178,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") 0px -176px;
+    background: url("pic/panda.jpg") 0px -176px;
 }
 
 .threeTwo {
@@ -192,7 +192,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -88px -176px;
+    background: url("pic/panda.jpg") -88px -176px;
 }
 
 .threeThree {
@@ -206,7 +206,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -176px -176px;
+    background: url("pic/panda.jpg") -176px -176px;
 }
 
 .threeFour {
@@ -220,7 +220,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -264px -176px;
+    background: url("pic/panda.jpg") -264px -176px;
 }
 
 .fourOne {
@@ -234,7 +234,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") 0px -264px;
+    background: url("pic/panda.jpg") 0px -264px;
 }
 
 .fourTwo {
@@ -248,7 +248,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -88px -264px;
+    background: url("pic/panda.jpg") -88px -264px;
 }
 
 .fourThree {
@@ -262,7 +262,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -176px -264px;
+    background: url("pic/panda.jpg") -176px -264px;
 }
 
 .fourFour {
@@ -276,7 +276,7 @@ button:hover {
     -moz-transition: all 0s; 
     -webkit-transition: all 0s; 
     -o-transition: all 0s;  
-    background: url("panda.jpg") -264px -264px;
+    background: url("pic/panda.jpg") -264px -264px;
 }
 
 .blank-square {
