--- a/puzzle.css
+++ b/puzzle.css
@@ -40,9 +40,10 @@ body {
 }
 
 button {
+	/*
     position: absolute;
     left: 46.5%;
-    top: 480px;
+    top: 480px;*/
     background-color: blue;
     font-size: 20px;
     color: white;
