--- a/puzzle.css
+++ b/puzzle.css
@@ -40,14 +40,10 @@ body {
 }
 
 button {
-	/*
-    position: absolute;
-    left: 46.5%;
-    top: 480px;*/
     background-color: blue;
     font-size: 20px;
     color: white;
-    /*padding: 10px 15px 10px 15px;*/
+    padding: 10px 15px 10px 15px;
     transition: all 1s;
     -moz-transition: all 1s; 
 	-webkit-transition: all 1s; 
